--- a/withdraw.html
+++ b/withdraw.html
@@ -8,10 +8,7 @@
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <style>
-* {
-  box-sizing: border-box;
-}
-
+* { box-sizing: border-box; }
 body {
   background:#020617;
   color:white;
@@ -21,32 +18,20 @@ body {
   overflow-x:hidden;
 }
 
-.container {
-  max-width:420px;
-  margin:0 auto;
-}
+.container { max-width:420px; margin:0 auto; }
 
 .card {
   background:#0f172a;
-  padding:12px;
+  padding:14px;
   border-radius:14px;
   margin-bottom:12px;
 }
 
-h3 {
-  margin:0 0 8px 0;
-  font-size:14px;
-  font-weight:bold;
-}
-
-label {
-  font-size:13px;
-  opacity:0.9;
-}
+h3 { margin:0 0 8px 0; font-size:14px; font-weight:bold; }
 
 input, select {
   width:100%;
-  padding:9px;
+  padding:10px;
   margin-top:6px;
   border-radius:10px;
   border:none;
@@ -57,7 +42,7 @@ input, select {
 
 button {
   width:100%;
-  padding:11px;
+  padding:12px;
   margin-top:12px;
   border:none;
   border-radius:12px;
@@ -67,9 +52,7 @@ button {
   font-size:14px;
 }
 
-button:disabled {
-  opacity:0.5;
-}
+button:disabled { opacity:0.5; }
 
 .msg {
   margin-top:10px;
@@ -82,10 +65,9 @@ button:disabled {
 .success { background:#22c55e; }
 .loading { background:#facc15; color:black; }
 
-.small {
-  font-size:12px;
-  opacity:0.75;
-}
+.small { font-size:12px; opacity:0.75; }
+
+.hidden { display:none; }
 </style>
 </head>
 
@@ -99,8 +81,18 @@ button:disabled {
   <!-- BALANCE -->
   <div class="card" id="balanceBox">Loading balance…</div>
 
+  <!-- MESSAGE FOR LOW BALANCE -->
+  <div class="card hidden" id="lowBalanceMsg">
+    <div class="msg error">
+      Minimum balance required to withdraw:<br>
+      ₦5,000 for bank transfer<br>
+      $20 for crypto
+    </div>
+    <button onclick="window.location.reload()">Go Back</button>
+  </div>
+
   <!-- WITHDRAW FORM -->
-  <div class="card">
+  <div class="card hidden" id="withdrawForm">
 
     <h3>Withdrawal Method</h3>
     <select id="method">
@@ -110,9 +102,8 @@ button:disabled {
     </select>
 
     <!-- BANK -->
-    <div id="bankFields" style="display:none">
+    <div id="bankFields" class="hidden">
       <h3 style="margin-top:10px">Bank Details</h3>
-
       <select id="bank">
         <option value="">Select Bank</option>
         <option>Opay</option>
@@ -126,8 +117,7 @@ button:disabled {
         <option>FCMB</option>
         <option>Other</option>
       </select>
-
-      <input id="otherBank" placeholder="Other bank name" style="display:none">
+      <input id="otherBank" placeholder="Other bank name" class="hidden">
       <input id="acctName" placeholder="Account Name">
       <input id="acctNumber" placeholder="Account Number">
       <input id="bankAmount" type="number" placeholder="Amount (₦)">
@@ -135,9 +125,8 @@ button:disabled {
     </div>
 
     <!-- CRYPTO -->
-    <div id="cryptoFields" style="display:none">
+    <div id="cryptoFields" class="hidden">
       <h3 style="margin-top:10px">Crypto Details</h3>
-
       <input id="wallet" placeholder="BNB Smart Chain (BEP20) Address">
       <input id="cryptoAmount" type="number" placeholder="Amount ($)">
       <div class="small">Minimum: $20</div>
@@ -169,44 +158,61 @@ const userInfo = document.getElementById("userInfo");
 const balanceBox = document.getElementById("balanceBox");
 const msgBox = document.getElementById("msgBox");
 const withdrawBtn = document.getElementById("withdrawBtn");
+const withdrawForm = document.getElementById("withdrawForm");
+const lowBalanceMsg = document.getElementById("lowBalanceMsg");
 
 let balanceNGN = 0;
 let usdRate = 0;
 
-function msg(text, type="success") {
-  msgBox.innerHTML = text ? `<div class="msg ${type}">${text}</div>` : "";
-}
-
+// Display user info
 userInfo.innerHTML = `
 <b>Name:</b> ${user?.first_name || "N/A"}<br>
 <b>Username:</b> ${user?.username ? "@"+user.username : "N/A"}<br>
 <b>ID:</b> ${telegramId || "N/A"}
 `;
 
+function showMsg(text, type="success") {
+  msgBox.innerHTML = text ? `<div class="msg ${type}">${text}</div>` : "";
+}
+
+// Load user balance
 async function loadBalance() {
-  msg("Loading balance…", "loading");
+  showMsg("Loading balance…", "loading");
 
-  const r = await fetch(API + "/admin/get-balance", {
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body: JSON.stringify({ telegramId })
-  });
+  try {
+    const r = await fetch(API + "/admin/get-balance", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({ telegramId })
+    });
+    const d = await r.json();
+    balanceNGN = d?.ngn || 0;
 
-  const d = await r.json();
-  balanceNGN = d?.ngn || 0;
+    const rate = await fetch("https://api.exchangerate.host/convert?from=NGN&to=USD");
+    const rd = await rate.json();
+    usdRate = rd?.info?.rate || 0.002;
 
-  const rate = await fetch("https://api.exchangerate.host/convert?from=NGN&to=USD");
-  const rd = await rate.json();
-  usdRate = rd?.info?.rate || 0.002;
+    balanceBox.innerHTML =
+      `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${(balanceNGN*usdRate).toFixed(2)}`;
 
-  balanceBox.innerHTML =
-    `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${(balanceNGN*usdRate).toFixed(2)}`;
-
-  withdrawBtn.disabled = balanceNGN < 5000;
-  msg("");
+    if (balanceNGN < 5000 && balanceNGN*usdRate < 20) {
+      lowBalanceMsg.classList.remove("hidden");
+      withdrawForm.classList.add("hidden");
+    } else {
+      withdrawForm.classList.remove("hidden");
+      lowBalanceMsg.classList.add("hidden");
+      withdrawBtn.disabled = false;
+    }
+    showMsg("");
+  } catch (err) {
+    showMsg("Failed to load balance: "+err.message, "error");
+    withdrawForm.classList.add("hidden");
+    lowBalanceMsg.classList.add("hidden");
+  }
 }
 loadBalance();
 
+// Show/hide fields
 method.onchange = () => {
   bankFields.style.display = method.value==="bank" ? "block" : "none";
   cryptoFields.style.display = method.value==="crypto" ? "block" : "none";
@@ -216,48 +222,56 @@ bank.onchange = () => {
   otherBank.style.display = bank.value==="Other" ? "block" : "none";
 };
 
+// Withdraw function
 async function withdraw() {
   const methodVal = method.value;
-  if (!methodVal) return msg("Select withdrawal method", "error");
+  if (!methodVal) return showMsg("Select withdrawal method", "error");
 
   let amountNGN = 0;
-
   if (methodVal === "bank") {
     amountNGN = Number(bankAmount.value);
-    if (amountNGN < 5000) return msg("Minimum bank withdrawal is ₦5,000", "error");
+    if (amountNGN < 5000) return showMsg("Minimum bank withdrawal is ₦5,000", "error");
+    if (amountNGN > balanceNGN) return showMsg("Insufficient balance", "error");
   }
-
   if (methodVal === "crypto") {
     const usd = Number(cryptoAmount.value);
-    if (usd < 20) return msg("Minimum crypto withdrawal is $20", "error");
+    if (usd < 20) return showMsg("Minimum crypto withdrawal is $20", "error");
     amountNGN = usd / usdRate;
+    if (amountNGN > balanceNGN) return showMsg("Insufficient balance", "error");
   }
 
-  msg("Submitting withdrawal…", "loading");
-
-  const res = await fetch(API + "/withdraw", {
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body: JSON.stringify({
-      telegramId,
-      method: methodVal,
-      amount: Math.round(amountNGN),
-      details: {
-        bank: bank.value==="Other" ? otherBank.value : bank.value,
-        accountName: acctName.value,
-        accountNumber: acctNumber.value,
-        wallet: wallet.value,
-        whatsapp: whatsapp.value,
-        phone: phone.value
-      }
-    })
-  });
-
-  const data = await res.json();
-  if (!res.ok) return msg(data.error, "error");
-
-  msg("Withdrawal submitted successfully", "success");
+  showMsg("Submitting withdrawal…", "loading");
   withdrawBtn.disabled = true;
+
+  try {
+    const res = await fetch(API + "/withdraw", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({
+        telegramId,
+        method: methodVal,
+        amount: Math.round(amountNGN),
+        details: {
+          bank: bank.value==="Other" ? otherBank.value : bank.value,
+          accountName: acctName.value,
+          accountNumber: acctNumber.value,
+          wallet: wallet.value,
+          whatsapp: whatsapp.value,
+          phone: phone.value
+        }
+      })
+    });
+
+    const data = await res.json();
+    if (!res.ok) throw new Error(data.error || "Withdrawal failed");
+
+    showMsg("✅ Withdrawal submitted successfully!", "success");
+    withdrawBtn.disabled = true;
+
+  } catch (err) {
+    showMsg("❌ Withdrawal failed: "+err.message, "error");
+    withdrawBtn.disabled = false;
+  }
 }
 </script>
 
